--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <ul class="website_container">
         <!-- Global Menu -->
         <div id="global_menu_button_container">
-            <p class="site_title">James(Jimmy) Dailey</p>
+            <p class="site_title">James (Jimmy) Dailey</p>
             <i class="fa fa-bars" id="global_menu_button"></i>
         </div>
         <ul id="global_menu_items">
@@ -76,7 +76,7 @@
                         of "soft skills" gathered from my time in the hospitality industry. I have a work ethic that doesn't stop until the work is completed fully and 
                         of the highest quality. I also know how to google search when I run into issues I don't fully understand, barring that, I am not afraid
                         to ask for help when I need to. Please reach out to me via email if you have questions.
-                        I also do freelance work whenever I can. I am authorized to work in the United States, and no not need sponsoring.
+                        I also do freelance work whenever I can. I am authorized to work in the United States, and do not need sponsoring.
                         Please consider me for your organization, or future freelance projects. <br> Thank you for visiting my site, and I hope to work with you soon! </br>"
                             
                     
