--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
             <!-- sidebar Content -->
             <div class="sidebar_content">
                 <h1>James(Jimmy) Dailey</h1>
-                <p>Frontend Web Developer</p>
+                <p>Web Developer</p>
                 <!-- Social Medias -->
                 <div class="social_media">
                     <a href="https://www.linkedin.com/in/james-dailey-84853678/"><i class="fab fa-linkedin"></i></a>
