--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
     <div class="website_container">
         <!-- Global Menu -->
         <div id="global_menu_button_container">
-            <p class="site_title">James(Jimmy) Dailey</p>
+            <p class="site_title">James(Jimmy)Dailey</p>
             <i class="fa fa-bars" id="global_menu_button"></i>
         </div>
         <ul id="global_menu_items">
@@ -43,7 +43,7 @@
             <!-- sidebar Content -->
             <div class="sidebar_content">
                 <h1>James(Jimmy) Dailey</h1>
-                <p>Frontend Web Developer</p>
+                <p>Web Developer</p>
                 <!-- Social Medias -->
                 <div class="social_media">
                     <a href="https://www.linkedin.com/in/james-dailey-84853678/"><i class="fab fa-linkedin"></i></a>
